unpackaged/main/default/objects/MessagingSession/fields/AgentMessageCount__c.field-meta.xml
<CustomField>
    <fullName>AgentMessageCount__c</fullName>
    <label>AgentMessageCount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>