unpackaged/main/default/objects/MessagingSession/fields/Appointment_State__c.field-meta.xml
<CustomField>
    <fullName>Appointment_State__c</fullName>
    <label>Appointment State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>