unpackaged/main/default/objects/MessagingSession/fields/MemberMessageCount__c.field-meta.xml
<CustomField>
    <fullName>MemberMessageCount__c</fullName>
    <label>MemberMessageCount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>