unpackaged/main/default/objects/MessagingSession/fields/Related_Service__c.field-meta.xml
<CustomField>
    <fullName>Related_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceAppointment.isBreakdown__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>