unpackaged/main/default/objects/MessagingSession/fields/Service_Appointment_Age__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Age__c</fullName>
    <label>Service Appointment Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>