unpackaged/main/default/objects/MessagingSession/fields/Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Status__c</fullName>
    <label>Service Appointment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>