unpackaged/main/default/objects/MessagingSession/fields/Total_Messages_Sent_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>Total_Messages_Sent_by_Agent__c</fullName>
    <label>Total Messages Sent by Agent</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>