unpackaged/main/default/objects/MessagingSession/fields/Total_Messages_Sent_By_Member__c.field-meta.xml
<CustomField>
    <fullName>Total_Messages_Sent_By_Member__c</fullName>
    <label>Total Messages Sent By Member</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>