unpackaged/main/default/objects/MessagingSession/listViews/All_Active_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Active_Sessions</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Active Sessions</label>
</ListView>