unpackaged/main/default/objects/MessagingSession/listViews/Assigned_Member_Messaging.listView-meta.xml
<ListView>
    <fullName>Assigned_Member_Messaging</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>EndUserContact</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>AcceptTime</columns>
    <columns>EndTime</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChannelName</field>
        <operation>equals</operation>
        <value>Member Messaging</value>
    </filters>
    <filters>
        <field>Owner</field>
        <operation>notEqual</operation>
        <value>autoproc</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Assigned Member Messaging</label>
</ListView>