unpackaged/main/default/objects/MessagingSession/listViews/SMS_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>SMS_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>SMS Queue</label>
    <queue>SMS_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>