unpackaged/main/default/objects/MessagingSession/listViews/Yesterday_s_Sessions.listView-meta.xml
<ListView>
    <fullName>Yesterday_s_Sessions</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartTime</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday&#39;s Sessions</label>
</ListView>